# datafusion-duckdb-benchmark

./: README.md  benchmark-all.sh  benchmark-single-core.sh  notes.md  pyproject.toml
clickbench/: README.md  benchmark.sh  df_test.py  df_test.sql  duckdb_test.py  plot.py
common/: run-datafusion.sh  run-duckdb.sh  run-query-datafusion.py  run-query-duckdb.py
h2o/: README.md  create-single-datafusion.sql
results/2023-10-29-df-33.0.0-duckdb-0.9.1/: clickbench_datafusion.csv  clickbench_duckdb.csv  h2o_datafusion.csv  h2o_duckdb.csv  tpch_datafusion.csv  tpch_duckdb.csv
results/2023-10-29-df-33.0.0-duckdb-0.9.1-mk2/: clickbench_datafusion.csv  clickbench_duckdb.csv  h2o.tex  h2o_datafusion.csv  h2o_duckdb.csv  tpch.tex  tpch_datafusion.csv  tpch_duckdb.csv
results/2023-10-29-df-33.0.0-duckdb-0.9.1-mk3/: clickbench.tex  clickbench_datafusion.csv  clickbench_duckdb.csv  h2o.tex  h2o_datafusion.csv  h2o_duckdb.csv  overall.csv  tpch.tex  tpch_datafusion.csv  tpch_duckdb.csv
results/2023-10-29-df-33.0.0-duckdb-0.9.1-scalability/: clickbench.tex  clickbench_datafusion.csv  clickbench_duckdb.csv
results/2023-11-02-df-33.0.0-duckdb-0.9.1/: clickbench.tex  clickbench_datafusion.csv  clickbench_duckdb.csv  h2o.tex  h2o_datafusion.csv  overall.csv  (+4 more)
results/2023-11-02-df-33.0.0-duckdb-0.9.1-scalability/: clickbench_datafusion.csv  clickbench_duckdb.csv
results/2023-11-02-df-33.0.0-duckdb-0.9.1-single-parquet/: clickbench_datafusion.csv  clickbench_duckdb.csv
tpch/: README.md  benchmark.sh  create-single-datafusion.sql  create-single-duckdb.sql  queries.sql  setup.sh
(+6 files in other folders)
