[project]
name = "datafusion-duckdb-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datafusion>=47.0.0",
    "duckdb>=1.3.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "prettytable>=3.16.0",
    "psutil>=7.0.0",
    "pyarrow>=20.0.0",
    "seaborn>=0.13.2",
]
